Se agregan conceptos de big data, data mining e ID3

--- a/capitulo1/justificacion.tex
+++ b/capitulo1/justificacion.tex
@@ -11,11 +11,11 @@ Una de las operaciones que brinda el sistema, es la actualización manual del st
 	\item Solicite administrar los pagos admisión seleccionando la opción \textbf{Administración de pagos} del menú \refIU{fig:menuPrincipalCG}{Menú del Contador General} y posteriormente la opción \textbf{Pagos Admisión} del menú \refIU{fig:menuPagosA}{Menú Pagos Admisión}.
 	\item Se mostrará la pantalla \refIU{fig:APA}{Administrar Pagos Admisión}.
 	\begin{figure}[!htbp]
-		\hypertarget{fig:APA}{\hspace{1pt}}
+		\hypertarget{fig:oo}{\hspace{1pt}}
 		\begin{center}
 			\includegraphics[height=0.3\textheight]{capitulo1/images/IU-APA.png}
 			\caption{Administrar Pagos Admisión}
-			\label{fig:APA}
+			\label{fig:oo}
 		\end{center}
 	\end{figure}
 	
